修改导出pdf，添加备货模块上传附件操作

--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/ChangeDetails.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/ChangeDetails.cshtml
@@ -27,6 +27,8 @@
                             return "华为订单交期修改";
                         } else if (cellvalue == "huaweiNotifyOrderChange") {
                             return "华为通知内容修改";
+                        } else if (cellvalue == "huaweiApplyCancelOrder") {
+                            return "华为申请取消";
                         } else if (cellvalue == "huaweiNotifyCancelOrder") {
                             return "华为通知取消";
                         }  else if (cellvalue == "vendorApplyQuantityChange") {
