--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Index.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Index.cshtml
@@ -56,61 +56,61 @@
                         <tr class="first-tr">
                             <td class="col-md-6 first-td">待接受</td>
                             <td class="col-md-6 first-td">
-                                <a id="before_signe_back" class="POboardTotalnum" name="before_signe_back" href="javascript:void()" data-param="Second=待接受&Third=ALL">0</a>
+                                <a id="before_signe_back" class="POboardTotalnum" name="before_signe_back" href="javascript:void(0)" data-param="Second=待接受&Third=ALL">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">新订单</td>
                             <td class="col-md-6">
-                                <a id="newOrderQuantity" class="POboardnum" name="newOrderQuantity" href="javascript:void()" data-param="Second=待接受&Third=新订单">0</a>
+                                <a id="newOrderQuantity" class="POboardnum" name="newOrderQuantity" href="javascript:void(0)" data-param="Second=待接受&Third=新订单">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">订单交期修改</td>
                             <td class="col-md-6">
-                                <a id="deliveryTimeChangedOrderQuantity" class="POboardnum" name="deliveryTimeChangedOrderQuantity" href="javascript:void()" data-param="Second=待接受&Third=订单交期修改">0</a>
+                                <a id="deliveryTimeChangedOrderQuantity" class="POboardnum" name="deliveryTimeChangedOrderQuantity" href="javascript:void(0)" data-param="Second=待接受&Third=订单交期修改">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">订单取消确认</td>
                             <td class="col-md-6">
-                                <a id="cancelledToConfirmedOrderQuantity" class="POboardnum" name="cancelledToConfirmedOrderQuantity" href="javascript:void()" data-param="Second=待接受&Third=订单交期修改">0</a>
+                                <a id="cancelledToConfirmedOrderQuantity" class="POboardnum" name="cancelledToConfirmedOrderQuantity" href="javascript:void(0)" data-param="Second=待接受&Third=订单交期修改">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">内容变更通知</td>
                             <td class="col-md-6">
-                                <a id="changedOrderQuantity" class="POboardnum" name="changedOrderQuantity" href="javascript:void()" data-param="Second=待接受&Third=内容变更通知">0</a>
+                                <a id="changedOrderQuantity" class="POboardnum" name="changedOrderQuantity" href="javascript:void(0)" data-param="Second=待接受&Third=内容变更通知">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">订单取消通知</td>
                             <td class="col-md-6">
-                                <a id="cancelOrderQuantity" class="POboardnum" name="cancelOrderQuantity" href="javascript:void()" data-param="Second=待接受&Third=订单取消通知">0</a>
+                                <a id="cancelOrderQuantity" class="POboardnum" name="cancelOrderQuantity" href="javascript:void(0)" data-param="Second=待接受&Third=订单取消通知">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">待华为确认交期更改</td>
                             <td class="col-md-6">
-                                <a id="deliveryTimeChangedPendingOrderQuantity" class="POboardnum" name="deliveryTimeChangedPendingOrderQuantity" href="javascript:void()" data-param="Second=待接受&Third=待华为确认交期更改">0</a>
+                                <a id="deliveryTimeChangedPendingOrderQuantity" class="POboardnum" name="deliveryTimeChangedPendingOrderQuantity" href="javascript:void(0)" data-param="Second=待接受&Third=待华为确认交期更改">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">待华为确认数量变更</td>
                             <td class="col-md-6">
-                                <a id="vendorApplyQtyChangeOrderQuantity" class="POboardnum" name="vendorApplyQtyChangeOrderQuantity" href="javascript:void()" data-param="Second=待接受&Third=待华为确认数量变更">0</a>
+                                <a id="vendorApplyQtyChangeOrderQuantity" class="POboardnum" name="vendorApplyQtyChangeOrderQuantity" href="javascript:void(0)" data-param="Second=待接受&Third=待华为确认数量变更">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">待华为确认取消</td>
                             <td class="col-md-6">
-                                <a id="vendorApplyCancelOrderQuantity" class="POboardnum" name="vendorApplyCancelOrderQuantity" href="javascript:void()" data-param="Second=待接受&Third=待华为确认取消">0</a>
+                                <a id="vendorApplyCancelOrderQuantity" class="POboardnum" name="vendorApplyCancelOrderQuantity" href="javascript:void(0)" data-param="Second=待接受&Third=待华为确认取消">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">RMA换货订单通知</td>
                             <td class="col-md-6">
-                                <a id="rmaBarterOrderQuantity" class="POboardnum" name="rmaBarterOrderQuantity" href="javascript:void()" data-param="Second=待接受&Third=RMA换货订单">0</a>
+                                <a id="rmaBarterOrderQuantity" class="POboardnum" name="rmaBarterOrderQuantity" href="javascript:void(0)" data-param="Second=待接受&Third=RMA换货订单">0</a>
                             </td>
                         </tr>
                     </table>
@@ -120,30 +120,30 @@
                         <tr class="first-tr">
                             <td class="col-md-6 first-td">已接受</td>
                             <td class="col-md-6 first-td">
-                                <a id="signed_back" class="POboardTotalnum" name="signed_back" href="javascript:void()" data-param="Second=已接受&Third=ALL">0</a></td>
+                                <a id="signed_back" class="POboardTotalnum" name="signed_back" href="javascript:void(0)" data-param="Second=已接受&Third=ALL">0</a></td>
                         </tr>
                         <tr>
                             <td class="col-md-6">在途订单</td>
                             <td class="col-md-6">
-                                <a id="intransitOrderQuantity" class="POboardnum" name="intransitOrderQuantity" href="javascript:void()" data-param="Second=已接受&Third=在途订单">0</a>
+                                <a id="intransitOrderQuantity" class="POboardnum" name="intransitOrderQuantity" href="javascript:void(0)" data-param="Second=已接受&Third=在途订单">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">已交货未关闭</td>
                             <td class="col-md-6">
-                                <a id="closed4Receving" class="POboardnum" name="closed4Receving" href="javascript:void()" data-param="Second=已接受&Third=已交货未关闭">0</a>
+                                <a id="closed4Receving" class="POboardnum" name="closed4Receving" href="javascript:void(0)" data-param="Second=已接受&Third=已交货未关闭">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">取消订单</td>
                             <td class="col-md-6">
-                                <a id="cancelledOrderQuantity" class="POboardnum" name="cancelledOrderQuantity" href="javascript:void()" data-param="Second=已接受&Third=取消订单">0</a>
+                                <a id="cancelledOrderQuantity" class="POboardnum" name="cancelledOrderQuantity" href="javascript:void(0)" data-param="Second=已接受&Third=取消订单">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">关闭订单</td>
                             <td class="col-md-6">
-                                <a id="closedOrderQuantity" class="POboardnum" name="closedOrderQuantity" href="javascript:void()" data-param="Second=已接受&Third=关闭订单">0</a>
+                                <a id="closedOrderQuantity" class="POboardnum" name="closedOrderQuantity" href="javascript:void(0)" data-param="Second=已接受&Third=关闭订单">0</a>
                             </td>
                         </tr>
                     </table>
@@ -157,25 +157,25 @@
                         <tr>
                             <td class="col-md-6">新订单超三天未处理</td>
                             <td class="col-md-6">
-                                <a id="expiredOrderQuantity" class="POboardnum" name="expiredOrderQuantity" href="javascript:void()" data-param="Second=预警&Third=新订单超三天未处理">0</a>
+                                <a id="expiredOrderQuantity" class="POboardnum" name="expiredOrderQuantity" href="javascript:void(0)" data-param="Second=预警&Third=新订单超三天未处理">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">预计两周内到货</td>
                             <td class="col-md-6">
-                                <a id="arrivalOnWeekOrderQuantity" class="POboardnum" name="arrivalOnWeekOrderQuantity" href="javascript:void()" data-param="Second=预警&Third=预计两周内到货">0</a>
+                                <a id="arrivalOnWeekOrderQuantity" class="POboardnum" name="arrivalOnWeekOrderQuantity" href="javascript:void(0)" data-param="Second=预警&Third=预计两周内到货">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">下单六个月未交货</td>
                             <td class="col-md-6">
-                                <a id="nonDeliveryOrderQuantity" class="POboardnum" name="nonDeliveryOrderQuantity" href="javascript:void()" data-param="Second=预警&Third=下单六个月未交货">0</a>
+                                <a id="nonDeliveryOrderQuantity" class="POboardnum" name="nonDeliveryOrderQuantity" href="javascript:void(0)" data-param="Second=预警&Third=下单六个月未交货">0</a>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-6">过期订单</td>
                             <td class="col-md-6">
-                                <a id="overdueOrderQuantity" class="POboardnum" name="overdueOrderQuantity" href="javascript:void()" data-param="Second=预警&Third=过期订单">0</a>
+                                <a id="overdueOrderQuantity" class="POboardnum" name="overdueOrderQuantity" href="javascript:void(0)" data-param="Second=预警&Third=过期订单">0</a>
                             </td>
                         </tr>
 
