--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/News.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/News.cshtml
@@ -401,17 +401,17 @@
 <div class="potopPanel">
     <div class="toolbar">
         <div class="btn-group poselect">
-            <select class="form-control" id="po-select-first" style="width:250px;height:auto;float:left;margin-right:5px;">
+            <select class="form-control po-select" id="po-select-first">
                 <option value="生产物料">生产物料</option>
                 @*<option value="综合采购">综合采购</option>*@
             </select>
-            <select class="form-control" id="po-select-second" onchange="secondChange()" style="width:250px;height:auto;float:left;margin-right:5px;">
+            <select class="form-control po-select" id="po-select-second" onchange="secondChange()">
                 <option value="ALL">ALL</option>
                 <option value="待接受">待接受</option>
                 <option value="已接受">已接受</option>
                 <option value="预警">预警</option>
             </select>
-            <select class="form-control" id="po-select-third" onchange="thirdChange()" style="width:250px;height:auto;float:left;margin-right:5px;">
+            <select class="form-control po-select" id="po-select-third" onchange="thirdChange()">
             </select>
         </div>
         <div class="operate">
