--- a/KingPlatform/Areas/HuaweiOrderManage/Views/StockManage/Index.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/StockManage/Index.cshtml
@@ -32,15 +32,15 @@
         $gridList.dataGrid({
             url: "/HuaweiOrderManage/StockManage/StockList",
             postData: { filename: filename, rnd: Math.random() },
-            height: $(window).height() - 178,
+            height: $(window).height() - 128,
             colModel: [
                 { label: '供应商工厂代码', name: 'vendorFactoryCode', width: 100, align: 'left', frozen: true },
-                { label: '供应商物料编码', name: 'vendorItemCode', width: 60, align: 'left', frozen: true },
-                { label: '客户代码', name: 'customerCode', width: 100, align: 'left' },
-                { label: '供应商子库', name: 'vendorStock', width: 100, align: 'left' },
-                { label: '供应商货位', name: 'vendorLocation', width: 100, align: 'left' },
+                { label: '供应商物料编码', name: 'vendorItemCode', width: 100, align: 'left', frozen: true, editable: true },
+                { label: '客户代码', name: 'customerCode', width: 100, align: 'left', frozen: true, editable: true },
+                { label: '供应商子库', name: 'vendorStock', width: 100, align: 'left', editable: true },
+                { label: '供应商货位', name: 'vendorLocation', width: 100, align: 'left', editable: true },
                 {
-                    label: '入库时间', name: 'stockTime', width: 100, align: 'left',
+                    label: '入库时间', name: 'stockTime', width: 100, align: 'left', editable: true,
                     editoptions: {
                         dataInit: function (element) {
                             $(element).datepicker({
@@ -55,22 +55,20 @@
                         }
                     }
                 },
-                { label: '供应商物料编码版本', name: 'vendorItemRevision', width: 100, align: 'left' },
-                { label: '库存', name: 'goodQuantity', width: 100, align: 'left' },
-                { label: '待检库存', name: 'inspectQty', width: 100, align: 'left' },
-                { label: '隔离品数量', name: 'faultQty', width: 100, align: 'left' }
+                { label: '供应商物料编码版本', name: 'vendorItemRevision', width: 120, align: 'left', editable: true },
+                { label: '库存', name: 'goodQuantity', width: 100, align: 'left', editable: true },
+                { label: '待检库存', name: 'inspectQty', width: 100, align: 'left', editable: true },
+                { label: '隔离品数量', name: 'faultQty', width: 100, align: 'left', editable: true }
             ],
             pager: "#gridPager",
             rowNum: 20,
             rowList: [15, 20, 50],
             autoScroll: true,
             viewrecords: true,
-            sortname: 'publishDate',
             gridComplete: function () {
                 $('#po-ajax-loader').fadeOut();
             },
             onPaging: function (pgButton) {
-                $("#choseNum").html(0);
                 $('#po-ajax-loader').fadeIn();
             }
         });
@@ -136,9 +134,7 @@
         uploader.on('uploadSuccess', function (file, response) {
             $('#' + file.id).find('p.state').text('已上传');
             $.post('/HuaweiOrderManage/StockManage/Merge', { guid: GUID, fileName: file.name }, function (data) {
-                console.log(data);
-                filename = data;
-                getPoList(filename);
+                getPoList(data.finalName);
                 $("#thelist .state").html("上传成功...");
             });
         });
