--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Index.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Index.cshtml
@@ -35,11 +35,19 @@
                 $("#warn").html(data.expiredOrderQuantity + data.arrivalOnWeekOrderQuantity + data.nonDeliveryOrderQuantity + data.overdueOrderQuantity);
             }
         });
-        $("a").on('click', function () {
+        /*$("a").on('click', function () {
+            event.stopPropagation();        //阻止冒泡
             var dataHref = "/HuaweiOrderManage/FindPOList/News";
             var dataId = "2bcb1fef-78f4-4a44-a0b8-4a0355d78a7a";
             var dataName = "PO列表";
             var dataParam = $(this).data("param");
+            parent.window.newIframe(dataId, dataHref, dataName, dataParam);
+        });*/
+        $(".table-hover tr").on('click', function () {
+            var dataHref = "/HuaweiOrderManage/FindPOList/News";
+            var dataId = "2bcb1fef-78f4-4a44-a0b8-4a0355d78a7a";
+            var dataName = "PO列表";
+            var dataParam = $(this).find('a').data("param");
             parent.window.newIframe(dataId, dataHref, dataName, dataParam);
         });
     });
@@ -47,6 +55,7 @@
 <div id="ajax-loader">
     <img src="~/Content/img/ajax-loader.gif" />
 </div>
+<a class="btn btn-primary refresh" style="position:absolute; top: 10px; right: 10px;" title="重新加载" onclick="$.reload()"><span class="glyphicon glyphicon-refresh"></span></a>
 <form id="form1">
     <div >
         <table class="table table-bordered bgWhite">
