--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/News.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/News.cshtml
@@ -96,6 +96,7 @@
                     }
                 },
                 { label: '行号', name: 'poLineNum', width: 30, align: 'left', frozen: true },
+                { label: '采购模式', name: 'businessMode', width: 60, align: 'left', frozen: true },
                 { label: '编码', name: 'itemCode', width: 80, align: 'left' },
                 {
                     label: '下单日期', name: 'publishDate', width: 120, align: 'left',
@@ -419,8 +420,8 @@
                 <li class="first"><span id="thirdShow"></span>列表</li>
                 <li class="first">已选中<span id="choseNum">0</span>项</li>
                 <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(true)"><i class="fa fa-check"></i>接受</a></li>
+                <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(false)"><i class="fa fa-reply"></i>驳回</a></li>
                 <li><a id="NF-btn_update" authorize="yes" onclick="btn_update()"><i class="fa fa-pencil-square-o"></i>修改</a></li>
-                @*<li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(false)"><i class="fa fa-reply"></i>PO签返（驳回）</a></li>*@
             </ul>
             <a class="btn btn-primary refresh" title="重新加载" onclick="$.reload()"><span class="glyphicon glyphicon-refresh"></span></a>
         </div>
