--- a/KingPlatform/Views/Home/Index.cshtml
+++ b/KingPlatform/Views/Home/Index.cshtml
@@ -12,6 +12,9 @@
     <link href="~/Content/css/framework-theme.css" rel="stylesheet" />
     <script src="~/Content/js/framework-ui.js"></script>
     <script src="~/Content/js/framework-clientdata.js"></script>
+    <script src="~/Content/js/datepicker/bootstrap-datepicker.js"></script>
+    <link href="~/Content/js/datepicker/bootstrap-datepicker.min.css" rel="stylesheet" />
+    <script src="~/Content/js/datepicker/locales/bootstrap-datepicker.zh-CN.js"></script>
 </head>
 <body>
     <div id="ajax-loader">
@@ -155,7 +158,7 @@
     </div>
     <script type="text/javascript" src="~/Content/js/index.js"></script>
     <script type="text/javascript" src="~/Content/js/indextab.js"></script>
-    <script>
+    <script type="text/javascript">
         function newIframe(dataId, dataHref, dataName, dataParam) {
             $("#header-nav>ul>li.open").removeClass("open");
             var dataId = dataId;
